# end-to-end-duckdb-dbt-pipeline

./: .gitignore  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
ingestion/: pipeline.py
